small change in moduleplan

--- a/SSfMT/moduleplan.htm
+++ b/SSfMT/moduleplan.htm
@@ -6,8 +6,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
-<link rel=File-List href="module%20plan.fld/filelist.xml">
-<style id="module plan_3222_Styles">
+<link rel=File-List href="moduleplan.fld/filelist.xml">
+<style id="moduleplan_1903_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
@@ -640,6 +640,19 @@ td
 	background:#ACB9CA;
 	mso-pattern:black none;
 	white-space:normal;}
+.xl126
+	{mso-style-parent:style0;
+	vertical-align:top;
+	background:#ACB9CA;
+	mso-pattern:black none;
+	white-space:normal;}
+.xl127
+	{mso-style-parent:style0;
+	vertical-align:top;
+	border:.5pt solid windowtext;
+	background:#A9D08E;
+	mso-pattern:black none;
+	white-space:normal;}
 -->
 </style>
 </head>
@@ -654,13 +667,13 @@ tags will be replaced.-->
 <!--START OF OUTPUT FROM EXCEL PUBLISH AS WEB PAGE WIZARD -->
 <!----------------------------->
 
-<div id="module plan_3222" align=center x:publishsource="Excel">
+<div id="moduleplan_1903" align=center x:publishsource="Excel">
 
-<table border=0 cellpadding=0 cellspacing=0 width=1530 style='border-collapse:
- collapse;table-layout:fixed;width:1144pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=1617 style='border-collapse:
+ collapse;table-layout:fixed;width:1209pt'>
  <col width=111 span=13 style='mso-width-source:userset;mso-width-alt:3541;
  width:83pt'>
- <col width=87 style='width:65pt'>
+ <col width=87 span=2 style='width:65pt'>
  <tr height=35 style='mso-height-source:userset;height:26.0pt'>
   <td height=35 class=xl64 colspan=5 width=555 style='height:26.0pt;mso-ignore:
   colspan;width:415pt'>Software Systems for Music Technology</td>
@@ -672,6 +685,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td width=111 style='width:83pt'></td>
   <td width=111 style='width:83pt'></td>
+  <td width=87 style='width:65pt'></td>
   <td width=87 style='width:65pt'></td>
  </tr>
  <tr height=36 style='mso-height-source:userset;height:27.0pt'>
@@ -686,7 +700,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
   <td height=21 class=xl100 width=111 style='height:16.0pt;width:83pt'>AUTUMN</td>
@@ -694,6 +708,7 @@ tags will be replaced.-->
   <td class=xl102>&nbsp;</td>
   <td class=xl101 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl100 width=111 style='width:83pt'>SPRING</td>
+  <td class=xl101 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl101 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl101 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl101 width=111 style='width:83pt'>&nbsp;</td>
@@ -714,11 +729,12 @@ tags will be replaced.-->
   <td class=xl87 width=111 style='width:83pt'>WEEK 4</td>
   <td class=xl88 width=111 style='border-top:none;width:83pt'>WEEK 5</td>
   <td class=xl88 width=111 style='border-top:none;width:83pt'>WEEK 6</td>
+  <td class=xl88 width=111 style='border-top:none;width:83pt'>&nbsp;</td>
   <td class=xl88 width=111 style='border-top:none;width:83pt'>WEEK 7</td>
   <td class=xl86 width=111 style='border-top:none;width:83pt'>WEEK 8</td>
   <td class=xl89 width=111 style='border-top:none;border-left:none;width:83pt'>WEEK
   10</td>
-  <td class=xl117 width=111 style='width:83pt'>WEEK 1</td>
+  <td class=xl117 width=87 style='width:65pt'>WEEK 1</td>
   <td class=xl90 width=87 style='width:65pt'>WEEK 2</td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
@@ -735,14 +751,14 @@ tags will be replaced.-->
   28.1</td>
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>Tue
   4.2</td>
-  <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>Tue
-  11.2</td>
+  <td class=xl126 width=111 style='width:83pt'>Mon 10.2</td>
+  <td class=xl67 width=111 style='border-top:none;width:83pt'>Tue 11.2</td>
   <td class=xl68 width=111 style='border-top:none;border-left:none;width:83pt'>Tue
   18.2</td>
   <td class=xl67 width=111 style='border-top:none;width:83pt'>Tue 25.2</td>
   <td class=xl84 width=111 style='border-top:none;border-left:none;width:83pt'>Tue
   10.3</td>
-  <td class=xl118 width=111 style='width:83pt'>Tue 14.4</td>
+  <td class=xl118 width=87 style='width:65pt'>Tue 14.4</td>
   <td class=xl70 width=87 style='width:65pt'>Wed 22.4</td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
@@ -755,6 +771,7 @@ tags will be replaced.-->
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>15:30-17:30</td>
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>15:30-17:30</td>
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>15:30-17:30</td>
+  <td class=xl67 width=111 style='border-left:none;width:83pt'>11:00-13:00</td>
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>15:30-17:30</td>
   <td class=xl68 width=111 style='border-top:none;border-left:none;width:83pt'>15:30-17:30</td>
   <td class=xl67 width=111 style='border-top:none;width:83pt'>15:30-17:30</td>
@@ -779,13 +796,15 @@ tags will be replaced.-->
   and Patterns</td>
   <td class=xl104 width=111 style='border-top:none;border-left:none;width:83pt'>Buses
   and Ndefs</td>
+  <td class=xl127 width=111 style='border-top:none;border-left:none;width:83pt'>Digital
+  Effects</td>
   <td class=xl104 width=111 style='border-top:none;border-left:none;width:83pt'>Interfacing</td>
   <td class=xl114 width=111 style='border-top:none;border-left:none;width:83pt'>Programing
   Concepts 2</td>
   <td class=xl96 width=111 style='border-top:none;border-left:none;width:83pt'>Buffer
   Tricks and Code Examples</td>
   <td class=xl110 width=111 style='width:83pt'>Organising your Code</td>
-  <td class=xl122 width=111 style='width:83pt'>Software (50%) and Technical
+  <td class=xl122 width=87 style='width:65pt'>Software (50%) and Technical
   Report (40%)</td>
   <td class=xl71 width=87 style='width:65pt'>Seminar/ Showcase (10%)</td>
  </tr>
@@ -801,14 +820,14 @@ tags will be replaced.-->
   24.1</td>
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>Fri
   31.1</td>
-  <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>Fri
-  7.2</td>
+  <td class=xl113 width=111 style='border-top:none;border-left:none;width:83pt'>&nbsp;</td>
+  <td class=xl115 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl68 width=111 style='border-top:none;border-left:none;width:83pt'>Fri
   14.2</td>
   <td class=xl113 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl113 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl70 width=111 style='width:83pt'>Fri 13.3</td>
-  <td class=xl122 width=111 style='width:83pt'>&nbsp;</td>
+  <td class=xl122 width=87 style='width:65pt'>&nbsp;</td>
   <td class=xl71 width=87 style='width:65pt'>&nbsp;</td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
@@ -820,12 +839,13 @@ tags will be replaced.-->
   <td class=xl69 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>14:00-16:00</td>
   <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>14:00-16:00</td>
-  <td class=xl67 width=111 style='border-top:none;border-left:none;width:83pt'>14:00-16:00</td>
+  <td class=xl115 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
+  <td class=xl115 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl68 width=111 style='border-top:none;border-left:none;width:83pt'>14:00-16:00</td>
   <td class=xl115 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl115 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl124 width=111 style='width:83pt'>14:00-16:00</td>
-  <td class=xl122 width=111 style='width:83pt'>&nbsp;</td>
+  <td class=xl122 width=87 style='width:65pt'>&nbsp;</td>
   <td class=xl71 width=87 style='width:65pt'>&nbsp;</td>
  </tr>
  <tr height=128 style='mso-height-source:userset;height:96.0pt'>
@@ -839,14 +859,14 @@ tags will be replaced.-->
   <td class=xl111 width=111 style='border-top:none;border-left:none;width:83pt'>Digital
   Synthesis</td>
   <td class=xl111 width=111 style='border-top:none;border-left:none;width:83pt'>Sequencing</td>
-  <td class=xl111 width=111 style='border-top:none;border-left:none;width:83pt'>Digital
-  Effects</td>
+  <td class=xl125 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
+  <td class=xl125 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl94 width=111 style='border-top:none;border-left:none;width:83pt'>HCI
   workshop</td>
   <td class=xl125 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl125 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl112 width=111 style='border-top:none;width:83pt'>Trouble-shooting</td>
-  <td class=xl123 width=111 style='width:83pt'>&nbsp;</td>
+  <td class=xl123 width=87 style='width:65pt'>&nbsp;</td>
   <td class=xl74 width=87 style='width:65pt'>&nbsp;</td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
@@ -854,7 +874,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
-  <td colspan=10 style='mso-ignore:colspan'></td>
+  <td colspan=11 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=23 style='mso-height-source:userset;height:17.0pt'>
   <td height=23 class=xl65 width=111 style='height:17.0pt;width:83pt'></td>
@@ -868,7 +888,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
   <td height=21 class=xl75 width=111 style='height:16.0pt;width:83pt'>&nbsp;</td>
@@ -882,7 +902,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
   <td height=21 class=xl78 width=111 style='height:16.0pt;width:83pt'>&nbsp;</td>
@@ -896,7 +916,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
   <td height=21 class=xl81 width=111 style='height:16.0pt;width:83pt'>&nbsp;</td>
@@ -910,7 +930,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
   <td height=21 style='height:16.0pt'></td>
@@ -924,10 +944,10 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='mso-height-source:userset;height:16.0pt'>
-  <td height=21 colspan=14 style='height:16.0pt;mso-ignore:colspan'></td>
+  <td height=21 colspan=15 style='height:16.0pt;mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -940,7 +960,7 @@ tags will be replaced.-->
   <td></td>
   <td></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -953,7 +973,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -966,7 +986,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -979,7 +999,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -992,7 +1012,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -1005,7 +1025,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -1018,7 +1038,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -1031,7 +1051,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -1044,7 +1064,7 @@ tags will be replaced.-->
   <td class=xl65 width=111 style='width:83pt'></td>
   <td class=xl65 width=111 style='width:83pt'></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <tr height=21 style='height:16.0pt'>
   <td height=21 colspan=2 style='height:16.0pt;mso-ignore:colspan'></td>
@@ -1057,7 +1077,7 @@ tags will be replaced.-->
   <td></td>
   <td></td>
   <td></td>
-  <td colspan=3 style='mso-ignore:colspan'></td>
+  <td colspan=4 style='mso-ignore:colspan'></td>
  </tr>
  <![if supportMisalignedColumns]>
  <tr height=0 style='display:none'>
@@ -1074,6 +1094,7 @@ tags will be replaced.-->
   <td width=111 style='width:83pt'></td>
   <td width=111 style='width:83pt'></td>
   <td width=111 style='width:83pt'></td>
+  <td width=87 style='width:65pt'></td>
   <td width=87 style='width:65pt'></td>
  </tr>
  <![endif]>
