added new tasks

--- a/SSfMT/Tasks/Task 6.html
+++ b/SSfMT/Tasks/Task 6.html
@@ -25,6 +25,6 @@
 <ul class='toc'><li class='toc1'><a href='#Formative%20Task%206'>Formative Task 6</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Formative%20Task%206'>Formative Task 6</a></h2>
 <ol>
-<li>Carefully go through <a href="./../../SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a> by reading the material and evaluating/studying the code.<li>Study the following guide: <a href="./../../SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a>.<li>Continue practising SuperCollider by generating your own synths</ol>
+<li>Carefully go through <a href="./../../SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a> by reading the material and evaluating/studying the code.<li>Study the following resource <a href="./../../SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a>.</ol>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 6.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 6.schelp</a><br>link::SSfMT/Tasks/Task 6::<br>sc version: 3.8.0</div></div></body></html>
