--- a/SSfMT.html
+++ b/SSfMT.html
@@ -40,7 +40,7 @@
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
-<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 25/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 2/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 14/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 17/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 21/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 24/1</ul>
+<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 25/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 2/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 14/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 17/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 21/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 24/1<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 4/2<li><a href="./SSfMT/Tasks/Task 8.html">Task 8</a> - Due 11/2</ul>
 
 <p><h3><a class='anchor' name='SuperCollider%20Resources'>SuperCollider Resources</a></h3>
 <ul>
