--- a/SSfMT/Tasks/Task 7.html
+++ b/SSfMT/Tasks/Task 7.html
@@ -25,9 +25,5 @@
 <ul class='toc'><li class='toc1'><a href='#Formative%20Task%207'>Formative Task 7</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Formative%20Task%207'>Formative Task 7</a></h2>
 <ol>
-<li>Carefully go through <a href="./../../SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a> by reading the material and evaluating/studying the code.<li>Complete 8 Synthesis Definitions (<code class='code prettyprint lang-sc'>SynthDef</code>) using each of following synthesis techniques:<ol>
-<li>Sample-based synthesis<li>Substrctive synthesis<li>Additive synthesis (summation)<li>Wavetable-lookup<li>Wave shaping<li>Wavetable crossfading and/or wave stacking<li>Modulation synthesis (Simple FM)<li>A synth using resonance (using <code class='code prettyprint lang-sc'>Formlet</code>, <code class='code prettyprint lang-sc'>Klank</code>, and/or <code class='code prettyprint lang-sc'>CombL</code>)</ol>
-
-<p><div class='note'><span class='notelabel'>NOTE:</span> you can work in groups for this</div>
-<p><li><em>Recommended Reading</em>: pp. 267-304 (Ch 17-20) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51280202840001381">Designing Sound</a> (Farnell 2010)</ol>
+<li>Carefully go through <a href="./../../SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a> by reading the material and evaluating/studying the code.<li><em>Recommended Reading</em>: pp. 267-304 (Ch 17-20) from <a href="http://yorsearch.york.ac.uk/44YORK:44YORK_ALMA_DS51280202840001381">Designing Sound</a> (Farnell 2010)</ol>
 <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 7.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Tasks/Task 7.schelp</a><br>link::SSfMT/Tasks/Task 7::<br>sc version: 3.8.0</div></div></body></html>
