--- a/Cyborg.html
+++ b/Cyborg.html
@@ -16,15 +16,15 @@
 <div id='label'>SuperCollider  (extension)</div>
 <div id='categories'><a href='./Browse.html#Tutorials/Cyborg'>Tutorials/Cyborg</a></div>
 <h1>Cyborg Music</h1>
-<div id='summary'>Human-computer co-cretivity</div>
+<div id='summary'>Human-machine co-creativity</div>
 </div>
 <div class='subheader'>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'><li class='toc2'><a href='#Module%20Information'>Module Information</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Lectures'>Lectures</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Formative%20Tasks'>Formative Tasks</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Seminars'>Seminars</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Practicals'>Practicals</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#SuperCollider%20Resources'>SuperCollider Resources</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Code%20Examples'>Code Examples</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Study%20Guides'>Study Guides</a></li>
@@ -32,29 +32,26 @@
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
 <ul>
-<li><a href="./SSfMT/Handbook.html">Handbook</a><li><a href="./SSfMT/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./SSfMT/Handbook.html#Assessment">Assessment</a><li><a href="./SSfMT/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./SSfMT/Assignment Briefs.html">Assignment Briefs</a><li><a href="./SSfMT/moduleplan.htm">Module Plan</a></ul>
-
-<p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
+<li><a href="./Cyborg/Handbook.html">Handbook</a><li><a href="./Cyborg/Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Cyborg/Handbook.html#Assessment">Assessment</a><li><a href="./Cyborg/Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Cyborg/Assignment Briefs.html">Assignment Briefs</a><li><a href="./Cyborg/moduleplan.htm">Module Plan</a></ul>
+<h3><a class='anchor' name='Seminars'>Seminars</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./SSfMT/Practicals/Interfacing.html">Interfacing</a><li><a href="./SSfMT/Practicals/Organising your Code.html">Organising your Code</a></ul>
-
-<p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
+<li><a href="./Cyborg/Seminars/Introduction to Cyborg Music.html">Introduction to Cyborg Music</a><li><a href="./Cyborg/Seminars/Computation and Music.html">Computation and Music</a><li><a href="./Cyborg/Seminars/Creativity and Music.html">Creativity and Music</a><li><a href="./Cyborg/Seminars/Computational Creativity and Music 1.html">Computational Creativity and Music 1</a><li><a href="./Cyborg/Seminars/Computational Creativity and Music 2.html">Computational Creativity and Music 2</a><li><a href="./Cyborg/Seminars/Human-machine Interaction.html">Human-machine Interaction</a><li><a href="./Cyborg/Seminars/Machine Listening.html">Machine Listening</a><li><a href="./Cyborg/Seminars/Machine Learning.html">Machine Learning</a></ul>
+<h3><a class='anchor' name='Practicals'>Practicals</a></h3>
 <ul>
-<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 25/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 2/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 14/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 17/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 21/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 24/1<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 4/2<li><a href="./SSfMT/Tasks/Task 8.html">Task 8</a> - Due 11/2</ul>
-
-<p><h3><a class='anchor' name='SuperCollider%20Resources'>SuperCollider Resources</a></h3>
+<li><a href="./Cyborg/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./Cyborg/Practicals/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./Cyborg/Practicals/UGens 1.html">UGens 1</a><li><a href="./Cyborg/Practicals/UGens 2.html">UGens 2</a><li><a href="./Cyborg/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./Cyborg/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./Cyborg/Practicals/Interfacing.html">Interfacing</a><li><a href="./Cyborg/Practicals/AI Music">AI Music</a></ul>
+<h3><a class='anchor' name='SuperCollider%20Resources'>SuperCollider Resources</a></h3>
 <ul>
-<li><a href="./SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a><li><a href="./SSfMT/Lectures/Digital Effects.html">Digital Effects</a><li><a href="./SSfMT/Study Guides/Buffer Tricks.html">Buffer Tricks</a></ul>
+<li><a href="./Cyborg/Resources/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./Cyborg/Resources/Digital Synthesis.html">Digital Synthesis</a><li><a href="./Cyborg/Resources/Digital Effects.html">Digital Effects</a><li><a href="./Cyborg/Resources/Buffer Tricks.html">Buffer Tricks</a></ul>
 
 <p><h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
 <ul>
-<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/Simple FX.html">Simple FX</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a></ul>
+<li><a href="./Cyborg/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./Cyborg/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./Cyborg/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./Cyborg/Code Examples/Simple FX.html">Simple FX</a><li><a href="./Cyborg/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./Cyborg/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./Cyborg/Code Examples/Mixing Things.html">Mixing Things</a></ul>
 
 <p><h3><a class='anchor' name='Study%20Guides'>Study Guides</a></h3>
 <ul>
-<li><a href="./SSfMT/Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./SSfMT/Study Guides/Deconstructing SC code.html">Deconstructing SC code</a></ul>
+<li><a href="./Cyborg/Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Cyborg/Study Guides/Deconstructing SC code.html">Deconstructing SC code</a></ul>
 <h2><a class='anchor' name='Links'>Links</a></h2>
 <ul>
-<li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.york.ac.uk/music/research/music-science-technology/research-groups/technologies-musical-creativity">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
+<li><a href="https://www.york.ac.uk/music/research/music-science-technology/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.york.ac.uk/music/research/music-science-technology/technologies-musical-creativity-group/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg.schelp</a><br>link::Cyborg::<br>sc version: 3.8.0</div></div></body></html>
