--- a/Cyborg/Assignment Briefs.html
+++ b/Cyborg/Assignment Briefs.html
@@ -35,9 +35,9 @@
 
 <p><h3><a class='anchor' name='Assessment%20Criteria'>Assessment Criteria</a></h3>
 <ul>
-<li>Understanding of the synthesis/effects and control systems involved<li>Sophistication of synthesis/effects/control system implementation<li>Well presented, clear, commented code<li>Creativity and originality in composition/performance/installation<li>Critical analysis (algorithms, code, sound, interaction, etc.)<li>Appropriate and well thought-out use of interface (graphical and devices)<li>Suitable parameter mapping of controls<li>Evidence of research including suitable citations and bibliography</ul>
+<li>Understanding of theoretical, historical, critical and technical aspects of computation, creativity and computer music.<li>Creativity and originality in technical and/or creative work.<li>Sophistication in the understanding and application of human-machine co-creativity concepts.<li>Well presented ideas, documentation and code.<li>Critical analysis (concepts, algorithms, code, sound, interaction, etc.).<li>Lateral thinking (concepts, algorithms, code, sound, interaction, etc.).<li>Proficiency using and combining music technologies and techniques.<li>Evidence of research including suitable citations and bibliography.</ul>
 
-<p>In your project you should respond to the following key points that will be evaluated in your <em>Software System</em>, <em>Technical Report</em> and <em>Presenation/Concert</em>:<ul>
-<li>Concept/idea of project<li>Research<li>Programming skills<li>Realisation and creative or research outputs<li>Project management and collaboration<li>Presentation<li>Critical evaluation</ul>
+<p>In your project you should respond to the following key points that will be evaluated in your <em>Presentation</em>, <em>Portfolio</em> and <em>Portfolio Documentation</em>:<ul>
+<li>Concept/idea of project<li>Research<li>Realisation of creative, technical and/or research outputs<li>Programming skills<li>Project management and collaboration<li>Presentation<li>Critical evaluation</ul>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Assignment Briefs.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/Cyborg/HelpSource/Cyborg/Assignment Briefs.schelp</a><br>link::Cyborg/Assignment Briefs::<br>sc version: 3.8.0</div></div></body></html>
